# PromptForge

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.codex/: config.toml
.promptforge/: project.json
apps/: README.md
apps/PromptForge/PromptForge.xcodeproj/: project.pbxproj
datasets/: core.jsonl
docs/: architecture.md  cli-reference.md  data-model.md  eval-philosophy.md  faq.md  index.md  operations.md  product-spec.md  runtime-and-pipeline.md  security-and-safety.md  start-here.md  testing-and-quality.md
docs/adr/: 0001-cli-first-artifact-driven-runtime.md  0002-multi-provider-gateway.md  0003-filesystem-artifacts-plus-sqlite-cache.md  0004-schema-first-evaluation-contract.md  0005-compare-builds-on-full-child-runs.md  0006-macos-app-helper-and-prompt-workspace.md  README.md
packaging/: README.md
packaging/macos/: bundle_engine.sh  release_app.sh
prompt_packs/draft-1773272066/: manifest.yaml  prompt.json  system.md  user_template.md
prompt_packs/v1/: manifest.yaml  system.md  user_template.md  variables.schema.json
prompt_packs/v2/: manifest.yaml  prompt.json  system.md  user_template.md  variables.schema.json
prompts/v1/: prompt.json  system.md  user_template.md
scenarios/: core.json
src/: README.md
src/promptforge/: cli.py  project.py  setup_wizard.py  ui.py
src/promptforge/agents/: __init__.py
src/promptforge/core/: config.py  hashing.py  logging.py  models.py  openai_client.py
src/promptforge/datasets/: loader.py
src/promptforge/forge/: __init__.py  models.py  service.py  workspace.py
src/promptforge/helper/: __init__.py  server.py
src/promptforge/prompts/: __init__.py  brief.py  (+1 more)
tests/: test_cache_and_compare.py  test_cli.py  test_codex_cli.py  test_codex_gateway.py  test_forge_session.py  test_helper_server.py  test_prompt_loader.py  test_run_service.py  test_scoring_rules.py  test_setup_wizard.py  test_workspace_service.py
var/state/: forge_workspace.json
(+47 files in other folders)
